--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -9,12 +9,12 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-lg-12">
+<div class="row" id="circuit_main">
+    <div {#class="col-lg-12"#} id="circuit_etapes">
         <div id="contetapes">
             {% for etape in service %}
 
-                <div class="col-lg-2 well etapes-circuit">
+                <div class="{#col-lg-2 #}well etapes-circuit">
 
                     <button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button>
 
@@ -38,19 +38,43 @@
 
                 </div>
             {% endfor %}
-        </div>
-        <div class="col-lg-2 text-center">
             <input type="hidden" name="valeurs" id="valeurs">
-            <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+            <div class="{#col-lg-2 #}text-center div-btn-ajout-etape">
+                <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+            </div>
         </div>
+
     </div>
 </div>
 
 <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/js/circuit_etape.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/js/jquery.mousewheel.min.js') }}"></script>
 <link rel="stylesheet" href="{{ asset('/css/circuit.css') }}"/>
 <script>
     $(document).ready(function() {
+
+        scrollFrisque();
+
+        // Pour le scroll à la molette de la souris
+        $("#circuit_etapes").mousewheel(function(event, delta) {
+            this.scrollLeft -= (delta * 100);
+            event.preventDefault();
+        });
+
+        // Fonction permettant d agrandir la frise dynamiquement.
+        function scrollFrisque () {
+            var widthLine = $('#circuit_main').css('width');
+            $('#circuit_etapes').css('width', widthLine);
+            var widthScroll = $('.etapes-circuit').length * 300 + 250;
+            $('#contetapes').css('width', widthScroll);
+//            console.log('widthScroll : ' + widthScroll);
+        }
+
+        // Sans bootstrap c'est la galère. Faut se gérer le rediementsionnement de la fenêtre à la mano...
+        window.onresize = function(event) {
+            scrollFrisque();
+        };
 
         // Bug pourquoi devoir remmettre la fonction et la relancer dans l ajout d etape ?
         function creerFleches() {
@@ -58,14 +82,26 @@
             $("<span/>").addClass("fleche_circuit glyphicon glyphicon-chevron-right").insertAfter(".etapes-circuit:not(:last)");
         }
 
+        // Pour le bouton de suppression de l etape
+        $(document).on('click','#suppetape',function() {
+            $(this).parent().remove();
+            creerFleches();
+        });
+
         $(document).on('click', '#addetape', function (e) {
             /*
              A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
              */
+            $(this).parent().remove();
             var contetapes = $('#contetapes');
 
             contetapes.append('' +
-            '<div class="col-lg-2 well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>');
+            {#'<div class="col-lg-2 well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>');#}
+            '<div class="well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
+            '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button></div>');
+
+
+            scrollFrisque();
 
             $("select.selusers").select2();
 
@@ -117,6 +153,7 @@
 
         $(function() {
             $( "#contetapes" ).sortable({
+                items :'> div:not(.etape-validante, .div-btn-ajout-etape)',
                 tolerance: "pointer",
                 stop: function (e, ui) {
                     creerFleches();
