--- a/web/css/circuit.css
+++ b/web/css/circuit.css
@@ -213,6 +213,9 @@
 
 #contetapes>div, .etapes-circuit {
     min-height: 235px;
+    width: 250px;
+    float: left;
+    position: relative;
 }
 
 #contetapes .etapes-circuit {
@@ -307,4 +310,11 @@
     width: 100% !important;
     text-align: center;
     cursor: pointer;
+}
+
+#circuit_main {
+    margin: 10px 0 30px 0;
+}
+#circuit_etapes {
+    overflow: auto;
 }
