--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{{ asset('/css/style.css') }}"/>
     <link rel="stylesheet" href="{{ asset('/css/menu.css') }}"/>
     <link rel="stylesheet" href="{{ asset('/css/table.css') }}"/>
+    {% if is_granted('ROLE_ADMIN') %}
+        <link rel="stylesheet" href="{{ asset('/css/menu-media-queries.css') }}"/>
+    {% endif %}
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
     <link rel="stylesheet" href="{{ asset('css/animate.css') }}"/>
@@ -31,152 +34,152 @@
 <body>
 
 <div id="maman">
-<div id="gauche">
-    <a href="{{ path('index') }}">
-    <div id="logo">
-            <img src="{{ asset("/images/logos.svg") }}"/>
-    </div>
-    </a>
-	<img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
-    <div id="logo">
-    <div class="border_imposetonstyle">
-	    {#TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
-	    <img  id="img_imposetonstyle"  src="{{ asset("/uploads/logo_coll/" ~ app.session.get('logo')) }}" />
-    </div>
-    </div>
-    {% if is_granted('ROLE_USER') and app.user.collectivite is not null %}
-	{% include 'SesileMainBundle:Default:menu.html.twig' %}
-    {% endif %}
-</div>
-
-<div id="droite">
-    <div id="header">
-        {% if app.user != null %}
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    <img class="userpicture"
-                         src="{% if app.user.path %}{{ asset(upload_path ~ app.user.path) }}{% else %}{{ asset("/images/imghomme.png") }}{% endif %}"/>
-                    &nbsp;
-                    {{ app.user.prenom }}&nbsp;{{ app.user.nom }}&nbsp;&nbsp;&nbsp;
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu menu_connexion" role="menu">
-                    <li class="li1">
-                        <a href="{{ path("fos_user_profile_edit") }}">
-                            <span class="glyphicon glyphicon-user"></span>
-                            Compte
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="li2">
-                        <a href="{{ path("logout") }}">
-                            <span class="glyphicon glyphicon-off"></span>
-                            D&eacute;connexion
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        {% else %}
-            <a class="btn btn-success" href="{{ path("login_check") }}">Connexion</a>
+    <div id="gauche">
+        <a href="{{ path('index') }}">
+        <div id="logo">
+                <img src="{{ asset("/images/logos.svg") }}"/>
+        </div>
+        </a>
+        <img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
+        <div id="logo">
+        <div class="border_imposetonstyle">
+            {#TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
+            <img  id="img_imposetonstyle"  src="{{ asset("/uploads/logo_coll/" ~ app.session.get('logo')) }}" />
+        </div>
+        </div>
+        {% if is_granted('ROLE_USER') and app.user.collectivite is not null %}
+        {% include 'SesileMainBundle:Default:menu.html.twig' %}
         {% endif %}
     </div>
 
-    {% include 'SesileMainBundle:Default:flashbag.html.twig' %}
-    <div id="lecontenu">
-        {% block content %}
-            <div id="contenu_acceuil">
-                {% if app.user == null %}
-                    <div class="bloc_accueil">
-                        <div id="bienvenue">
-                            <div class="titre_bloc_accueil">
-                                <span class="glyphicon glyphicon-home"></span>
-                                Bienvenue
-                            </div>
-                            {% filter raw %}
-                            {{ msg_acc|raw }}
-                            {% endfilter %}
-                        </div>
-                    </div>
-                {% endif %}
-                <div class="bloc_accueil">
-                    {% if app.user %}
-                        <script type="application/javascript"
-                                src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
-                        <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}"
-                              rel="stylesheet"/>
+    <div id="droite">
+        <div id="header">
+            {% if app.user != null %}
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <img class="userpicture"
+                             src="{% if app.user.path %}{{ asset(upload_path ~ app.user.path) }}{% else %}{{ asset("/images/imghomme.png") }}{% endif %}"/>
+                        &nbsp;
+                        {{ app.user.prenom }}&nbsp;{{ app.user.nom }}&nbsp;&nbsp;&nbsp;
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu menu_connexion" role="menu">
+                        <li class="li1">
+                            <a href="{{ path("fos_user_profile_edit") }}">
+                                <span class="glyphicon glyphicon-user"></span>
+                                Compte
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="li2">
+                            <a href="{{ path("logout") }}">
+                                <span class="glyphicon glyphicon-off"></span>
+                                D&eacute;connexion
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            {% else %}
+                <a class="btn btn-success" href="{{ path("login_check") }}">Connexion</a>
+            {% endif %}
+        </div>
 
-                        {% render url("delegations_all_list") %}
-                        <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
-                                style="display: none;"></object>
-                        <div id="classeurs_a_valider">
-                            <div class="titre_bloc_accueil">
-                                <span class="glyphicon glyphicon-edit"></span>
-                                Classeurs à valider
+        {% include 'SesileMainBundle:Default:flashbag.html.twig' %}
+        <div id="lecontenu">
+            {% block content %}
+                <div id="contenu_acceuil">
+                    {% if app.user == null %}
+                        <div class="bloc_accueil">
+                            <div id="bienvenue">
+                                <div class="titre_bloc_accueil">
+                                    <span class="glyphicon glyphicon-home"></span>
+                                    Bienvenue
+                                </div>
+                                {% filter raw %}
+                                {{ msg_acc|raw }}
+                                {% endfilter %}
                             </div>
-
-                            {% render url("classeur_a_valider") %}
-                        </div>
-                        <div id="liste_classeurs">
-                            <div class="titre_bloc_accueil">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                Liste des classeurs
-                            </div>
-                            {% render url("liste_classeurs") %}
-                        </div>
-                        {% include 'SesileClasseurBundle:Classeur:legende.html.twig' %}
-
-                    {% else %}
-                        <div class="titre_bloc_accueil">
-                            <span class="glyphicon glyphicon-home"></span>
-                            Informations
-                        </div>
-                        <div id="img_accueil">
-                            <img src="{{ asset("/images/paraph_img_accueil.jpg") }}"/>
                         </div>
                     {% endif %}
+                    <div class="bloc_accueil">
+                        {% if app.user %}
+                            <script type="application/javascript"
+                                    src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
+                            <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}"
+                                  rel="stylesheet"/>
+
+                            {% render url("delegations_all_list") %}
+                            <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
+                                    style="display: none;"></object>
+                            <div id="classeurs_a_valider">
+                                <div class="titre_bloc_accueil">
+                                    <span class="glyphicon glyphicon-edit"></span>
+                                    Classeurs à valider
+                                </div>
+
+                                {% render url("classeur_a_valider") %}
+                            </div>
+                            <div id="liste_classeurs">
+                                <div class="titre_bloc_accueil">
+                                    <span class="glyphicon glyphicon-eye-open"></span>
+                                    Liste des classeurs
+                                </div>
+                                {% render url("liste_classeurs") %}
+                            </div>
+                            {% include 'SesileClasseurBundle:Classeur:legende.html.twig' %}
+
+                        {% else %}
+                            <div class="titre_bloc_accueil">
+                                <span class="glyphicon glyphicon-home"></span>
+                                Informations
+                            </div>
+                            <div id="img_accueil">
+                                <img src="{{ asset("/images/paraph_img_accueil.jpg") }}"/>
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
+            {% endblock %}
+        </div>
+        <div id="footer">
+            <div id="textefooter">
+                <span class="legal">
+                    <a class="contact" href="mailto:internet@sictiam.fr">
+                        <span class="lettersmove">CONTACT</span>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="sesiletooltip mentionlegales" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode"
+                       target="_blank"><!-- data-toggle="tooltip"
+                    title="Parapheur Sesile - 2013" -->
+                        <span class="lettersmove">MENTIONS L&Eacute;GALES</span>
+
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="sesiletooltip creativecommons" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/"> <!--data-toggle="tooltip"
+                    title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br /> Pas de modification - 3.0 France"-->
+                        <span class="lettersmove">CREATIVE COMMONS</span>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="sesiletooltip creativecommons" href="{{ path("apropos") }}" target="_blank"> <!--data-toggle="tooltip"
+                    title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br /> Pas de modification - 3.0 France"-->
+                        <span class="lettersmove">À PROPOS</span>
+                    </a>
+
+                    </span>
+                    <br/>
+                    <span class="signature">
+                    <a class="sitesictiam" href="http://www.sictiam.fr/" target="_blank">
+                        COPYRIGHT &copy;2014
+                        &nbsp; &ndash; &nbsp;
+                        R&Eacute;ALIS&Eacute; PAR LE SICTIAM
+                    </a>
+                    </span>
             </div>
-        {% endblock %}
-    </div>
-    <div id="footer">
-        <div id="textefooter">
-<span class="legal">
-<a class="contact" href="mailto:internet@sictiam.fr">
-    <span class="lettersmove">CONTACT</span>
-</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="sesiletooltip mentionlegales" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/legalcode"
-   target="_blank"><!-- data-toggle="tooltip"
-title="Parapheur Sesile - 2013" -->
-    <span class="lettersmove">MENTIONS L&Eacute;GALES</span>
-
-</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="sesiletooltip creativecommons" href="http://creativecommons.org/licenses/by-nc-nd/3.0/fr/"> <!--data-toggle="tooltip"
-title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br /> Pas de modification - 3.0 France"-->
-    <span class="lettersmove">CREATIVE COMMONS</span>
-</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="sesiletooltip creativecommons" href="{{ path("apropos") }}" target="_blank"> <!--data-toggle="tooltip"
-title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br /> Pas de modification - 3.0 France"-->
-    <span class="lettersmove">À PROPOS</span>
-</a>
-
-</span>
-            <br/>
-<span class="signature">
-<a class="sitesictiam" href="http://www.sictiam.fr/" target="_blank">
-    COPYRIGHT &copy;2014
-    &nbsp; &ndash; &nbsp;
-    R&Eacute;ALIS&Eacute; PAR LE SICTIAM
-</a>
-</span>
-        </div>
-        <div id="logosictiampetit">
-            <img src="/images/logosictiampetit.png"/>
+            <div id="logosictiampetit">
+                <img src="/images/logosictiampetit.png"/>
+            </div>
         </div>
     </div>
-</div>
 {% block losjavascriptos %}
 {% endblock %}
 <script type="text/javascript">
